[package]
name = "vax"
version = "0.1.0"
authors = ["Jakub Labath <jakub@labath.ca>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# i do not think i want and/or need the panic hook
# default = ["console_error_panic_hook"]
default = []

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.7"
ontariopublic = { path = "../ontariopublic" }
rust_decimal = "1.19"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# commenting out -> console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# need to do this on M1 Macs
# https://github.com/rustwasm/wasm-pack/issues/913
# it is possible to run the wasm-opt manually
# wasm-opt -Os -o out.wasm in.wasm
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false

# alternatively

# install this - builds seem to use the local wasm-opt afterwards
# cargo install wasm-pack --git https://github.com/rustwasm/wasm-pack --rev ae10c23cc14b79ed37a7be222daf5fd851b9cd0d