[package]
name = "vax"
version = "0.1.0"
authors = ["Jakub Labath <jakub@labath.ca>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
worker = "0.0.8"
ontariopublic = { path = "../ontariopublic" }
rust_decimal = "1.19"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# need to do this on M1 Macs
# https://github.com/rustwasm/wasm-pack/issues/913
# it is possible to run the wasm-opt manually
# wasm-opt -Os -o out.wasm in.wasm
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false

# alternatively

# install this - builds seem to use the local wasm-opt afterwards
# cargo install wasm-pack --git https://github.com/rustwasm/wasm-pack --rev ae10c23cc14b79ed37a7be222daf5fd851b9cd0d