[package]
name = "import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.67"
ontariopublic = { path = "../ontariopublic" }
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.19"
clap = "3.1"
csv = "1.1"